[FEAT]-Stock-V1-Email-fixes